# termai

./: .gitignore  .termai.example.toml  .termai.toml  .termai_history  CLAUDE.md  Cargo.toml  GPT5_VERIFICATION.md  INTEGRATION_TEST_STRATEGY.md  QUICK_REFERENCE.md  README.md  \  app.db  justfile  test_api_fix.md
.github/workflows/: ci.yml
docs/: CHAT_FORMATTING_INTEGRATION_COMPLETE.md  CODEX_OAUTH.md  COMMANDS.md  ENHANCED_OUTPUT_COMPLETION.md  GIT_INTEGRATION.md  GIT_QUICK_REFERENCE.md  GPT5_FEATURES.md  GPT5_VERIFICATION.md  PRESET_SYSTEM_COMPLETION.md  README.md  preset-guide.md  preset-quick-reference.md
docs/tasks/: 00-implementation-summary.md  06-git-integration-phase2.md  07-template-preset-system.md  08-enhanced-output-formatting.md  09-project-configuration-system.md  11-adaptive-learning-system.md  12-analytics-monitoring.md  ux-improvement-analysis.md
src/: app.rs  args.rs  args_old.rs  db.rs  discovery.rs  lib.rs  main.rs  manpage.rs  repository.rs  ui.rs
src/args/: structs.rs  validation.rs
src/auth/: callback_server.rs  mod.rs  models.rs  oauth_client.rs  pkce.rs  token_manager.rs
src/branch/: comparison.rs  manager.rs  merge.rs  mod.rs  tree.rs
src/chat/: commands.rs  demo.rs  formatter.rs  interactive.rs  mod.rs  repl.rs  state.rs  tests.rs
src/commands/: ask.rs  auth.rs  branch.rs  chat.rs  codex_auth.rs  commit.rs  completion.rs  config.rs  conflicts.rs  help.rs  hooks.rs  mod.rs  preset.rs  rebase.rs  review.rs  session.rs  setup.rs  stash.rs  tag.rs  tests.rs
src/common/: mod.rs  unique_id.rs
src/completion/: dynamic.rs  mod.rs  values.rs
src/config/: env.rs  loader.rs  mod.rs  project.rs  schema.rs  settings.rs
src/context/: analyzer.rs  cache.rs  chunker.rs  config.rs  detector.rs  diff.rs  mod.rs  multi_session.rs  optimizer.rs  template_manager.rs  templates.rs
src/git/: commit.rs  diff.rs  hooks.rs  mod.rs  repository.rs  review.rs
src/llm/: mod.rs
src/output/: browser.rs  demo.rs  export.rs  message.rs  mod.rs  outputter.rs  streaming.rs  syntax.rs  themes.rs
src/path/: extract.rs  mod.rs  model.rs
src/personality/: enhancement.rs  mod.rs
src/preset/: builtin.rs  manager.rs  mod.rs  template.rs  variables.rs
src/redactions/: common.rs  mod.rs  redact.rs  revert.rs
src/repository/: db.rs
src/session/: mod.rs
src/setup/: mod.rs  tests.rs  validator.rs  wizard.rs
src/ui/: mod.rs  timer.rs
tasks/: 01-interactive-setup-wizard.md  02-interactive-chat-mode.md  03-smart-context-discovery.md  04-command-structure-refactoring.md  05-git-integration.md  06-enhanced-session-management.md  07-template-preset-system.md  08-enhanced-output-formatting.md  09-project-configuration-system.md  10-conversation-branching.md  README.md
tasks/build-fixes/: 001-fix-unused-mut-markdown-widget.md  002-fix-unused-function-format-messages.md  003-fix-unused-function-format-message.md  004-fix-unused-field-viewport-height.md  README.md
tasks/configuration/: 001-add-theme-customization.md  002-add-keyboard-customization.md  003-add-model-parameter-controls.md
tasks/critical-bugs/: 001-fix-session-index-bounds-checking.md  002-fix-database-race-conditions.md  003-fix-datetime-parsing-panics.md  004-fix-memory-leaks-visual-mode.md
tasks/high-priority-bugs/: 001-fix-http-client-resource-leaks.md  002-fix-scroll-bounds-checking.md  003-improve-error-handling-consistency.md  004-fix-terminal-state-restoration.md
tests/: git_integration_tests.rs  integration_test.rs  markdown_integration_test.rs  simple_git_tests.rs  simple_integration_test.rs  smart_context_integration.rs  standalone_integration_test.rs
tests/common/: fixtures.rs  mocks.rs  (+2 more)
(+139 files in other folders)
