[package]
name = "termai"
version = "0.1.0"
edition = "2021"

[lints.rust]
warnings = "deny"

[dependencies]
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.33.0", features = ["bundled"] }
anyhow = "1.0.89"
clap = { version = "4.5.19", features = ["derive"] }
clap_complete = "4.5.21"
clap_mangen = "0.2.23"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
reqwest = { version = "0.12.8", features = ["json"] }
colored = "3.0.0"
syntect = "5.0"
dirs = "6.0.0"
regex = "1.11.0"
chrono = { version = "0.4.39", features = ["serde"] }
predicates = "3.1.3"
ring = "0.17.13"
dialoguer = "0.11.0"
indicatif = "0.17.7"
console = "0.15.8"
async-trait = "0.1.77"
rustyline = "14.0"
crossterm = "0.27"
tokio-stream = "0.1"
futures-util = "0.3"
toml = "0.8"           # Configuration file parsing
config = "0.14"        # Layered configuration management
walkdir = "2.4"        # Directory traversal
ignore = "0.4"         # Gitignore parsing
tiktoken-rs = "0.5"    # Token counting
git2 = "0.18"          # Git operations
handlebars = "6.0"     # Template engine for presets
serde_yaml = "0.9"     # Preset file format parsing and config export
pulldown-cmark = "0.10" # Markdown processing
pulldown-cmark-to-cmark = "13.0" # Markdown serialization
comrak = "0.21"        # GitHub-flavored Markdown
html2text = "0.6"      # HTML to text conversion
tiny_http = "0.12"     # Local server for preview
base64 = "0.21"        # Base64 encoding for PKCE
sha2 = "0.10"          # SHA256 for PKCE challenge
rand = "0.8"           # Random generation for state/verifier
webbrowser = "1.0"     # Open browser for OAuth flow

[dependencies.uuid]
version = "1.11.0"
features = ["v4"]

[dev-dependencies]
tempfile = "3.16.0"
rusqlite = "0.33.0"
assert_cmd = "2.0.12"
predicates = "3.0.4"